feat(ui): step 1 complete

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,6 +7,14 @@
     "module": "ESNext",
     "types": ["vite/client"],
     "skipLibCheck": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["*"],
+      "app/*": ["app/*"],
+      "pages/*": ["pages/*"],
+      "shared/*": ["shared/*"],
+      "features/*": ["features/*"]
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
